2012-04-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (copy_or_invent_formatstring):  Expansion to many decimal
	places of precision is not necessary if the axis range spans 0, because
	in that case exponential notation can be used instead.
	Bug #3514604

2012-04-01  Hannes Nagel  <hannes.nagel@itp.uni-leipzig.de>

	* term/lua.term: Do not create external png images if they are not 
	going to be used in the tex document.

2012-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c term/post.trm term/pslatex.trm src/term_api.h src/color.c:
	The core code should not write terminal-specific output.  Instead define
	TERM_LAYER_BEGIN_PM3D_MAP and TERM_LAYER_END_PM3D_MAP and use the 
	term->layer() mechanism.  This prevents garbage from being written out
	to the cairolatex terminals in pm3d mode.
	Bug #3513291

2012-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_polygon): Always stroke
	previous path before starting a new polygon.  Also, dots are slow.
	Only draw them if specifically requested.
	Bug #3512955

2012-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion): Revised handling of backslash
	character in enhanced text processing.
	Bug #3496517

2012-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/svg.trm:  
	Do not allow execution of popen() commands during initialization.

2012-03-08  RELEASE 4.6.0

2012-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp: Backport CVS fixes for toggling plots
	on/off in multiplots and to limit the toggle effect to the contents
	of the current plot.

2012-03-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/doc2ipf.c (process_line): Don't use assert() because it calls
	int_error().

2012-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.os2: version.o is required for gnuplot_x11.exe.

2012-03-02  Ethan A Merritt  <merritt@u.washington.edu>
